force-app/main/default/objects/VCC_Progress_Note__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Formula field calculating date and time of the creation of this Progress Note</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PN Created Date Time</label>
    <type>DateTime</type>
</CustomField>