force-app/main/default/objects/VCC_Progress_Note__c/fields/Is_Eligible_Clinical_Triage_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_Clinical_Triage_Case__c</fullName>
    <description>Checkbox to indicate that the patient is eligible for a CT Case.</description>
    <formula>OR (ISPICKVAL (VCC_Logistical_Recommendation_WHEN__c,&quot;Within 8 Hours&quot;), ISPICKVAL (VCC_Logistical_Recommendation_WHEN__c,&quot;Now&quot;) )</formula>
    <label>Is Eligible Clinical Triage Case</label>
    <type>Checkbox</type>
</CustomField>