force-app/main/default/objects/VCC_Progress_Note__c/fields/PC_Persona__c.field-meta.xml
<CustomField>
    <fullName>PC_Persona__c</fullName>
    <description>Used to identify a PrC persona specialties within the Sign Note process.</description>
    <formula>&quot;PRC &quot;+ TEXT(PC_Case__r.Specialty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to identify a PrC persona specialties within the Sign Note process.</inlineHelpText>
    <label>Persona</label>
    <type>Text</type>
</CustomField>