force-app/main/default/objects/VCC_Progress_Note__c/fields/PC_Referring_Provider_Location__c.field-meta.xml
<CustomField>
    <fullName>PC_Referring_Provider_Location__c</fullName>
    <description>Retrieves the FLP Location from the PrC Case</description>
    <formula>PC_Case__r.FLP_Location__r.Name</formula>
    <label>Referring Provider Location</label>
    <type>Text</type>
</CustomField>