force-app/main/default/objects/VCC_Progress_Note__c/fields/PC_SignNote_Comments__c.field-meta.xml
<CustomField>
    <fullName>PC_SignNote_Comments__c</fullName>
    <description>Progress Note comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Note Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>