force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Blood_Pressure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TED_Blood_Pressure_Date_Time__c</fullName>
    <description>Captures the Date/Time when a Veteran&apos;s Blood Pressure Vital Sign was collected.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Blood Pressure Time Stamp.</inlineHelpText>
    <label>Blood Pressure Date/Time</label>
    <type>DateTime</type>
</CustomField>