force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Body_Mass_Index__c.field-meta.xml
<CustomField>
    <fullName>TED_Body_Mass_Index__c</fullName>
    <description>Used in TED Nurse Progress Note, Medical Progress Note flows as a picklist choice set</description>
    <label>Body Mass Index</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>