force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Chief_Complaint__c.field-meta.xml
<CustomField>
    <fullName>TED_Chief_Complaint__c</fullName>
    <description>Chief Complaint will be used and visible to Tele-EC Users instead of Salesforce&apos;s standard &quot;Subject&quot; case field. This language is more relevant to health care providers.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Main reason for seeking medical attention.</inlineHelpText>
    <label>Chief Complaint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>