force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Columbia_Screening_Q1__c.field-meta.xml
<CustomField>
    <fullName>TED_Columbia_Screening_Q1__c</fullName>
    <description>Columbia Screening Questionnaire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Columbia Screening Q1</label>
    <length>120</length>
    <type>Text</type>
</CustomField>