force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Columbia_Screening_Q6__c.field-meta.xml
<CustomField>
    <fullName>TED_Columbia_Screening_Q6__c</fullName>
    <description>Columbia Screening questionnaire.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Columbia Screening Q6</label>
    <length>120</length>
    <type>Text</type>
</CustomField>