force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Columbia_Screening_Result__c.field-meta.xml
<CustomField>
    <fullName>TED_Columbia_Screening_Result__c</fullName>
    <description>Field to capture if the result of a Columbia Screening was negative or positive.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Columbia Screening Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>