force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Emergency_Severity_Index_ESI_Level__c.field-meta.xml
<CustomField>
    <fullName>TED_Emergency_Severity_Index_ESI_Level__c</fullName>
    <description>Levels to measure the severity of an emergency.</description>
    <label>Emergency Severity Index (ESI) Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>