force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Escalated_to_Tele_EC__c.field-meta.xml
<CustomField>
    <fullName>TED_Escalated_to_Tele_EC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in New Tele Emergency Care Case flow where it updates the checkbox.</description>
    <label>Escalated to Tele-EC</label>
    <type>Checkbox</type>
</CustomField>