force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Is_ScreenFlow_Update__c.field-meta.xml
<CustomField>
    <fullName>TED_Is_ScreenFlow_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Tele-EC Users update Vital Signs data through the Nurse or Medical Provider Progress Note Screen Flows the flag will be TRUE. This field works in the backend on Tele-EC Progress Note Flows and &apos;Update Vital Signs Date Time&apos; Record Triggered Flow.</description>
    <label>Is ScreenFlow Update</label>
    <type>Checkbox</type>
</CustomField>