force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Pulse_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TED_Pulse_Date_Time__c</fullName>
    <description>Captures the Date/Time Pulse Vital Sign was collected.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pulse Vital Sign Time Stamp.</inlineHelpText>
    <label>Pulse Date/Time</label>
    <type>DateTime</type>
</CustomField>