force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Pulse_Oximetry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TED_Pulse_Oximetry_Date_Time__c</fullName>
    <description>Captures the Date/Time when a Veteran&apos;s Pulse Oximetry Vital Sign was collected.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pulse Oximetry Time Stamp.</inlineHelpText>
    <label>Pulse Oximetry Date/Time</label>
    <type>DateTime</type>
</CustomField>