force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Reason__c.field-meta.xml
<CustomField>
    <fullName>TED_Reason__c</fullName>
    <description>Captures the reason why a Patient was unable to answer the Columbia Screening Questionnaire.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is filled out when a Patient is unable to complete the Columbia Screening</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>