force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Subject__c.field-meta.xml
<CustomField>
    <fullName>TED_Subject__c</fullName>
    <description>Subject field for Nurses Progress Note</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>