force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Suicide_Screen__c.field-meta.xml
<CustomField>
    <fullName>TED_Suicide_Screen__c</fullName>
    <description>Used in TED Nurse Progress Note flow as a picklist choice set</description>
    <label>Suicide Screen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete Suicide Screen</fullName>
            </value>
            <value>
                <fullName>Unable to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>