force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_Temperature_F_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TED_Temperature_F_Date_Time__c</fullName>
    <description>Captures the Date/Time when a Veteran&apos;s Temperature *F was collected.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Temperature *F Time Stamp.</inlineHelpText>
    <label>Temperature *F Date/Time</label>
    <type>DateTime</type>
</CustomField>