force-app/main/default/objects/VCC_Progress_Note__c/fields/TED_ToggleValidation__c.field-meta.xml
<CustomField>
    <fullName>TED_ToggleValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to bypass Columbia Screening Validation Rule in a TED Triage Nurse Progress Note Flow.</description>
    <label>ToggleValidation</label>
    <type>Checkbox</type>
</CustomField>