force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Active_Outpatient_Medications__c.field-meta.xml
<CustomField>
    <fullName>TUC_Active_Outpatient_Medications__c</fullName>
    <description>Captures the medications of the patients</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Outpatient Medications</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>