force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Consult_Origin__c.field-meta.xml
<CustomField>
    <fullName>TUC_Consult_Origin__c</fullName>
    <description>Used in TED Nurse Progress Note, Medical Progress Note flows. Used to capture the consult origin</description>
    <label>Consult Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Contact Center</fullName>
            </value>
            <value>
                <fullName>Community Living Center/Nursing Facility</fullName>
            </value>
            <value>
                <fullName>VA Health Chat</fullName>
            </value>
            <value>
                <fullName>PACT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Clinical Contact Center/Call Center</fullName>
                <isActive>false</isActive>
                <label>Clinical Contact Center/Call Center</label>
            </value>
            <value>
                <fullName>Clinical Intake Prioritization</fullName>
                <isActive>false</isActive>
                <label>Clinical Intake Prioritization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>