force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Medication_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>TUC_Medication_Reconciliation__c</fullName>
    <description>Formula field that shows text when Medication Reconciliation Done is true</description>
    <formula>IF(TUC_Med_Reconciliation_Done__c = TRUE,&quot;Current Medications reviewed with patient/caregiver and reconciliation of medications related to today&apos;s visit completed, including non-VA medication and discrepancies, if identified, were addressed. Medication changes and the importance of medication management were reviewed with the patient/caregiver today based on individual needs. Patient/caregiver acknowledged understanding of instructions as stated.&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medication reconciliation</label>
    <type>Text</type>
</CustomField>