force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Objective__c.field-meta.xml
<CustomField>
    <fullName>TUC_Objective__c</fullName>
    <description>Used in TED Nurse Progress Note, Medical Progress Note flows. Used to capture the objective of the medical progress note</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Objective</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>