force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Outcome__c.field-meta.xml
<CustomField>
    <fullName>TUC_Outcome__c</fullName>
    <description>Used in VCC Sign Progress Note with Callouts, Medical Progress Note, TED Nurse Progress Note flows. Used to capture the outcome of the progress note</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferred to Tele-EC Medical Provider</fullName>
            </value>
            <value>
                <fullName>911</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Acute Issue Resolved</fullName>
            </value>
            <value>
                <fullName>Care Incomplete</fullName>
            </value>
            <value>
                <fullName>Abandoned - Connection Failure</fullName>
                <isActive>false</isActive>
                <label>Abandoned - Connection Failure</label>
            </value>
            <value>
                <fullName>Abandoned - by Veteran</fullName>
                <isActive>false</isActive>
                <label>Abandoned - by Veteran</label>
            </value>
            <value>
                <fullName>Abandoned- Over Capacity</fullName>
                <isActive>false</isActive>
                <label>Abandoned- Over Capacity</label>
            </value>
            <value>
                <fullName>Care Incomplete - Connection Failure</fullName>
                <isActive>false</isActive>
                <label>Care Incomplete - Connection Failure</label>
            </value>
            <value>
                <fullName>Declined by Veteran</fullName>
                <isActive>false</isActive>
                <label>Declined by Veteran</label>
            </value>
            <value>
                <fullName>Emergency Department/VA referral</fullName>
                <isActive>false</isActive>
                <label>Emergency Department/VA referral</label>
            </value>
            <value>
                <fullName>Emergency Dept</fullName>
                <isActive>false</isActive>
                <label>Emergency Dept</label>
            </value>
            <value>
                <fullName>Issue Resolved</fullName>
                <isActive>false</isActive>
                <label>Issue Resolved</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>PACT (Primary Care) Referral</fullName>
                <isActive>false</isActive>
                <label>PACT (Primary Care) Referral</label>
            </value>
            <value>
                <fullName>Primary Care/PACT</fullName>
                <isActive>false</isActive>
                <label>Primary Care/PACT</label>
            </value>
            <value>
                <fullName>Resolved Issues</fullName>
                <isActive>false</isActive>
                <label>Resolved Issues</label>
            </value>
            <value>
                <fullName>Transferred to Tele Emergency Care Provider</fullName>
                <isActive>false</isActive>
                <label>Transferred to Tele Emergency Care Provider</label>
            </value>
            <value>
                <fullName>Urgent Care Center/VA referral</fullName>
                <isActive>false</isActive>
                <label>Urgent Care Center/VA referral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>