force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Outcome_Detail__c.field-meta.xml
<CustomField>
    <fullName>TUC_Outcome_Detail__c</fullName>
    <description>To be used when Outcome field has specific selections</description>
    <label>Outcome Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TUC_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Emergency Department</fullName>
            </value>
            <value>
                <fullName>VA Emergency Department</fullName>
            </value>
            <value>
                <fullName>Community Urgent Care</fullName>
            </value>
            <value>
                <fullName>VA Urgent Care</fullName>
            </value>
            <value>
                <fullName>Referred to Primary Care/Pact</fullName>
            </value>
            <value>
                <fullName>Referred to Specialty Care</fullName>
            </value>
            <value>
                <fullName>Declined by Veteran</fullName>
            </value>
            <value>
                <fullName>Connection Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>