force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Phone_Visit_Consent__c.field-meta.xml
<CustomField>
    <fullName>TUC_Phone_Visit_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the patient given consent for a phone visit?</description>
    <label>Phone Visit Consent Obtained</label>
    <type>Checkbox</type>
</CustomField>