force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Plan__c.field-meta.xml
<CustomField>
    <fullName>TUC_Plan__c</fullName>
    <description>Used in TED Nurse Progress Note, Medical Progress Note flows. Used to capture the plan for the progress note</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>