force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Pt_Verbalizes_Understanding_of_CP__c.field-meta.xml
<CustomField>
    <fullName>TUC_Pt_Verbalizes_Understanding_of_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in TED Nurse Progress Note, Medical Progress Note flows. Used to capture patient&apos;s verbal understanding of care plan</description>
    <label>Pt Verbalizes Understanding of Care Plan</label>
    <type>Checkbox</type>
</CustomField>