force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Reason_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>TUC_Reason_for_Referral__c</fullName>
    <description>Only used in report type. Potentially depracated</description>
    <label>Reason for Referral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Ear/Nose/Throat/Respiratory</fullName>
            </value>
            <value>
                <fullName>Endocrine</fullName>
            </value>
            <value>
                <fullName>Eye</fullName>
            </value>
            <value>
                <fullName>Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Genitourinary</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Musculoskeletal</fullName>
            </value>
            <value>
                <fullName>Neurologic</fullName>
            </value>
            <value>
                <fullName>Skin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>