force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_TeleUrgentVisit__c.field-meta.xml
<CustomField>
    <fullName>TUC_TeleUrgentVisit__c</fullName>
    <description>Formula field that shows text based on the record type</description>
    <formula>IF(RecordType.DeveloperName = &quot;TUC_Virtual_Visit&quot;,&quot;This is a tele-urgent care visit to address acute/urgent issues. Definitive care on chronic medical issues will be deferred to routine Primary Care appointment/provider.&quot;,
IF(RecordType.DeveloperName= &quot;TUC_Chart_Review&quot;, &quot;This is a tele-urgent care visit to address acute/urgent issues. Definitive care on chronic medical issues will be deferred to routine Primary Care appointment/provider.&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tele-Urgent Visit</label>
    <type>Text</type>
</CustomField>