force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Time_Spent_in_consultation_CR__c.field-meta.xml
<CustomField>
    <fullName>TUC_Time_Spent_in_consultation_CR__c</fullName>
    <description>Used in TED Nurse Progress Note, Medical Progress Note flows. Used to capture the time spent in chart review</description>
    <label>Time Spent in Virtual Visit/Chart Review</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>