force-app/main/default/objects/VCC_Progress_Note__c/fields/TUC_Triage_Time_is_Downgraded__c.field-meta.xml
<CustomField>
    <fullName>TUC_Triage_Time_is_Downgraded__c</fullName>
    <description>Used in TED Nurse Progress Note, Medical Progress Note flows. Used to capture the triage time downgraded</description>
    <label>Triage Time is Downgraded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Now, 2-8 hours</fullName>
            </value>
            <value>
                <fullName>12-24 hours</fullName>
            </value>
            <value>
                <fullName>2 - 3 days</fullName>
            </value>
            <value>
                <fullName>1 -2 weeks</fullName>
            </value>
            <value>
                <fullName>Self-care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>