force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Able_to_observe_HEENT_symptoms__c.field-meta.xml
<CustomField>
    <fullName>VCC_Able_to_observe_HEENT_symptoms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>During video visit, provider is able to observe the patient HEENT symptoms</description>
    <inlineHelpText>During video visit, provider is able to observe the patient HEENT (Head, Eyes, Ears, Nose, Throat) symptoms</inlineHelpText>
    <label>Able to observe HEENT symptoms</label>
    <type>Checkbox</type>
</CustomField>