force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Action_Recommended__c.field-meta.xml
<CustomField>
    <fullName>VCC_Action_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the PSCT/Signer Guidance section of VVPN. MP selects this action if follow up action is recommended.</description>
    <inlineHelpText>Select this check box if Follow Up Action is Recommended. Add comments below.</inlineHelpText>
    <label>Action Recommended</label>
    <type>Checkbox</type>
</CustomField>