force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Action_Requested_Completed__c.field-meta.xml
<CustomField>
    <fullName>VCC_Action_Requested_Completed__c</fullName>
    <description>Indicates the route requested by the patient and completed by the pharmacy</description>
    <inlineHelpText>Select the route requested by the patient and completed by the pharmacy</inlineHelpText>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Mail Prescription</fullName>
            </value>
            <value>
                <fullName>CMOP Prescription</fullName>
            </value>
            <value>
                <fullName>Mail in Prescription</fullName>
            </value>
            <value>
                <fullName>Pick up Prescription at Window</fullName>
            </value>
            <value>
                <fullName>Pick up Prescription outside VA</fullName>
            </value>
            <value>
                <fullName>Mail Prescription</fullName>
                <isActive>false</isActive>
                <label>Mail Prescription</label>
            </value>
            <value>
                <fullName>Overnight Local Mail</fullName>
                <isActive>false</isActive>
                <label>Overnight Local Mail</label>
            </value>
            <value>
                <fullName>Pick up at Window</fullName>
                <isActive>false</isActive>
                <label>Pick up at Window</label>
            </value>
            <value>
                <fullName>VCC_Pick_up_at_Window</fullName>
                <isActive>false</isActive>
                <label>Pick up at Windows</label>
            </value>
            <value>
                <fullName>VCC_Pick_up_outside_VA</fullName>
                <isActive>false</isActive>
                <label>Pick up outside VA</label>
            </value>
            <value>
                <fullName>Pick up outside VA</fullName>
                <isActive>false</isActive>
                <label>Pick up outside VA2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>