force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Administrative_Note_Comments_Long__c.field-meta.xml
<CustomField>
    <fullName>VCC_Administrative_Note_Comments_Long__c</fullName>
    <description>Additional Information to be included in the Progress Note</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional Information to be included in the Progress Note</inlineHelpText>
    <label>Administrative Note Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>