force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Advised_of_Financial_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>VCC_Advised_of_Financial_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Patient has been advised of Financial Disclaimer</description>
    <inlineHelpText
    >Patient advised that recommendation for care provided during the call does not constitute an approval or authorization for payment by the VA or its staff. Patient advised
        to report a community ED visit to the national Office of Community Care at 1-844-724-7842 within 72 hours</inlineHelpText>
    <label>Advised of Financial Disclaimer</label>
    <type>Checkbox</type>
</CustomField>