force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Agent_Orange_Exposure__c.field-meta.xml
<CustomField>
    <fullName>VCC_Agent_Orange_Exposure__c</fullName>
    <description>Visit related to Agent Orange Exposure</description>
    <inlineHelpText>Visit related to Agent Orange Exposure</inlineHelpText>
    <label>Agent Orange Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>