force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Allergies__c.field-meta.xml
<CustomField>
    <fullName>VCC_Allergies__c</fullName>
    <description>Used by CCC pharmacists and medical providers to note allergies from patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Allergy comments from the pharmacist or medical provider</inlineHelpText>
    <label>Allergies</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>