force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Allergies_reviewed__c.field-meta.xml
<CustomField>
    <fullName>VCC_Allergies_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Indicates that the pharmacy has reviewed the following allergies with the patient. PENICILLIN, TETRACYCLINE, FORTAZ ADD-VANTAGE, LISINOPRIL, VANCOMYCIN, POLLEN METHYL
        SALICYLATE, FISH, PORK</description>
    <inlineHelpText
    >Check if you have reviewed the following allergies with the patient. PENICILLIN, TETRACYCLINE, FORTAZ ADD-VANTAGE, LISINOPRIL, VANCOMYCIN, POLLEN METHYL SALICYLATE, FISH,
        PORK</inlineHelpText>
    <label>Allergies reviewed</label>
    <type>Checkbox</type>
</CustomField>