force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Best_Time_to_Contact_Patient__c.field-meta.xml
<CustomField>
    <fullName>VCC_Best_Time_to_Contact_Patient__c</fullName>
    <description>Best time available to call the Patient back.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Best Time to Contact Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>