force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>VCC_Blood_Pressure__c</fullName>
    <description>Blood pressure provided by patient</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Blood pressure provided by patient</inlineHelpText>
    <label>Blood pressure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>