force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Call_Back_Number__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_Back_Number__c</fullName>
    <description>Best callback number for the patient, if different from the Primary Phone.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Best callback number for the patient, if different from the Primary Phone.</inlineHelpText>
    <label>Call Back Number</label>
    <type>Phone</type>
</CustomField>