force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Call_Dropped__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_Dropped__c</fullName>
    <description>If call was dropped with the patient, which action did the agent take to reconnect.</description>
    <inlineHelpText>If call was dropped with the patient, which action did the agent take to reconnect.</inlineHelpText>
    <label>Call Dropped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Message to call back the CCC</fullName>
            </value>
            <value>
                <fullName>Contacted authorities for welfare check</fullName>
            </value>
            <value>
                <fullName>PACT contacted for follow up</fullName>
            </value>
            <value>
                <fullName>Other - unable to reconnect</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Unable to reconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>