force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Call_was_dropped_unable_to_reconnect__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_was_dropped_unable_to_reconnect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the patient is non-triage, the call was dropped and the agent was unable to reconnect</description>
    <inlineHelpText>Check if the patient is non-triage, the call was dropped and the agent was unable to reconnect</inlineHelpText>
    <label>Call was dropped; unable to reconnect</label>
    <type>Checkbox</type>
</CustomField>