force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Caller_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>VCC_Caller_Name_Text__c</fullName>
    <description>Caller Name is populated from the Phone Call/Case, if different from the Veteran.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Caller Name is populated from the Phone Call/Case, if different from the Veteran.</inlineHelpText>
    <label>Caller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>