force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Caller_s_Comments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Caller_s_Comments__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Contains the Caller&apos;s Comments on the Clinical Triage 2.0 Progress Note for SOAPIE template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caller&apos;s Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>